@@ -10,3 +10,5 @@ obstructed-pipe=P.U.M.P. was unable to layout the pipes. Clear area of obstructi
 missing-resource=P.U.M.P. did not find fluid resources in selected area.
 mixed-resources=P.U.M.P. cannot mix resources. 
 other-pipes-nearby=P.U.M.P. aborted, because there are other pipes present within the selected area.
+no-suitable-extractor=P.U.M.P. did not find a suitable miner for the resource '__1__'.
+extractor-must-be-square=P.U.M.P. planner can only handle square miners. The resource '__1__' only has rectangular shaped miner(s) available.
