@@ -22,8 +22,9 @@ Date: 2020-04-27
     - Miscalutation in underground pipe distance.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.4
-Date: ?
+Date: 2020-05-02
   Changes:
     - Improve behavior for very small selections.
   Features:
-    - Add support for any liquid resource for which a suitable miner is available. No hardcoded resource and miner names anymore. 
+    - Add support for any liquid resource for which a suitable miner is available. If there's multiple miner types available for the same resource, the one Factorio returns first is picked. Rectangular shaped miners are excluded due to limitations in the planner routine.
+    - Retrieve miner's pipe output position and size from its prototype. If there are mutliple output resources, or multiple outputs for the same resource, the ones Factorio returns first are picked. 
